--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 36,
    "id": "ecacf3bd",
    "metadata": {},
    "outputs": [
@@ -780,236 +780,260 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>26.524913</td>\n",
-       "      <td>27</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every day</td>\n",
-       "      <td>1</td>\n",
-       "      <td>pregnant</td>\n",
-       "      <td>0.650000</td>\n",
-       "      <td>76.800000</td>\n",
-       "      <td>55.033626</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.066667</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>20.195092</td>\n",
-       "      <td>30</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every workday</td>\n",
-       "      <td>1</td>\n",
-       "      <td>pregnant</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>89.333333</td>\n",
-       "      <td>62.962952</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.013889</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>631</th>\n",
-       "      <td>20.077335</td>\n",
-       "      <td>28</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every workday</td>\n",
-       "      <td>1</td>\n",
-       "      <td>pregnant</td>\n",
-       "      <td>0.788462</td>\n",
-       "      <td>71.500000</td>\n",
-       "      <td>36.382230</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.153846</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>980</th>\n",
-       "      <td>20.571429</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every workday</td>\n",
-       "      <td>2</td>\n",
-       "      <td>pregnant</td>\n",
-       "      <td>0.970000</td>\n",
-       "      <td>79.250000</td>\n",
-       "      <td>28.335784</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.190000</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1126</th>\n",
-       "      <td>23.808690</td>\n",
-       "      <td>27</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every day</td>\n",
-       "      <td>2</td>\n",
-       "      <td>not_pregnant</td>\n",
-       "      <td>0.093750</td>\n",
-       "      <td>102.666667</td>\n",
-       "      <td>98.913430</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.024306</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1300</th>\n",
-       "      <td>20.936639</td>\n",
+       "      <th>0</th>\n",
+       "      <td>22.942130</td>\n",
        "      <td>31</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>No, never</td>\n",
+       "      <td>University</td>\n",
+       "      <td>Wake same every workday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>25.588235</td>\n",
+       "      <td>2.526332</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19.886054</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>University</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>7</td>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.009569</td>\n",
+       "      <td>30.875000</td>\n",
+       "      <td>3.522884</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.052632</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.323049</td>\n",
+       "      <td>41</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>No, never</td>\n",
+       "      <td>University</td>\n",
+       "      <td>Several times during the night</td>\n",
+       "      <td>4</td>\n",
+       "      <td>not_pregnant</td>\n",
+       "      <td>0.298246</td>\n",
+       "      <td>27.666667</td>\n",
+       "      <td>2.503331</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.149123</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24.386526</td>\n",
+       "      <td>27</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>No, never</td>\n",
+       "      <td>High school</td>\n",
+       "      <td>Wake same every workday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.895833</td>\n",
+       "      <td>24.250000</td>\n",
+       "      <td>3.453776</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.145833</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29.299971</td>\n",
+       "      <td>29</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>No, never</td>\n",
+       "      <td>Trade/technical/vocational training</td>\n",
+       "      <td>Wake same every day</td>\n",
+       "      <td>2</td>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>25.466667</td>\n",
+       "      <td>0.990430</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.254902</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1990</th>\n",
+       "      <td>24.867781</td>\n",
+       "      <td>36</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>PhD</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>1</td>\n",
+       "      <td>not_pregnant</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>30.250000</td>\n",
+       "      <td>2.061553</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1991</th>\n",
+       "      <td>21.616406</td>\n",
+       "      <td>32</td>\n",
        "      <td>GB</td>\n",
        "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Wake same every day</td>\n",
-       "      <td>6</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>Wake same every workday</td>\n",
+       "      <td>2</td>\n",
+       "      <td>pregnant</td>\n",
+       "      <td>0.843750</td>\n",
+       "      <td>31.166667</td>\n",
+       "      <td>2.483277</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1992</th>\n",
+       "      <td>24.218750</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>Unreported</td>\n",
+       "      <td>High school</td>\n",
+       "      <td>Wake same every workday</td>\n",
+       "      <td>20</td>\n",
        "      <td>not_pregnant</td>\n",
-       "      <td>0.858369</td>\n",
-       "      <td>80.333333</td>\n",
-       "      <td>117.825082</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.081545</td>\n",
+       "      <td>0.540187</td>\n",
+       "      <td>26.629630</td>\n",
+       "      <td>1.620735</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.050467</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1521</th>\n",
-       "      <td>23.888441</td>\n",
-       "      <td>31</td>\n",
+       "      <th>1993</th>\n",
+       "      <td>21.453574</td>\n",
+       "      <td>30</td>\n",
        "      <td>Other</td>\n",
        "      <td>No, never</td>\n",
        "      <td>University</td>\n",
-       "      <td>Unreported</td>\n",
+       "      <td>Wake same every workday</td>\n",
        "      <td>1</td>\n",
        "      <td>not_pregnant</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>145.500000</td>\n",
-       "      <td>168.998521</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>38.600000</td>\n",
+       "      <td>41.126634</td>\n",
        "      <td>False</td>\n",
-       "      <td>0.037037</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1555</th>\n",
-       "      <td>20.195578</td>\n",
-       "      <td>32</td>\n",
+       "      <th>1994</th>\n",
+       "      <td>19.948690</td>\n",
+       "      <td>29</td>\n",
        "      <td>SE</td>\n",
        "      <td>No, never</td>\n",
        "      <td>University</td>\n",
-       "      <td>Unreported</td>\n",
-       "      <td>1</td>\n",
-       "      <td>not_pregnant</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>126.000000</td>\n",
-       "      <td>156.751396</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1586</th>\n",
-       "      <td>27.290694</td>\n",
-       "      <td>30</td>\n",
-       "      <td>US</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Unreported</td>\n",
-       "      <td>1</td>\n",
-       "      <td>not_pregnant</td>\n",
-       "      <td>0.266667</td>\n",
-       "      <td>79.500000</td>\n",
-       "      <td>95.671312</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1724</th>\n",
-       "      <td>22.862369</td>\n",
-       "      <td>25</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>No, never</td>\n",
-       "      <td>University</td>\n",
-       "      <td>Unreported</td>\n",
+       "      <td>Wake same every workday</td>\n",
        "      <td>2</td>\n",
        "      <td>pregnant</td>\n",
-       "      <td>0.170732</td>\n",
-       "      <td>78.250000</td>\n",
-       "      <td>45.375287</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.207317</td>\n",
+       "      <td>0.779661</td>\n",
+       "      <td>29.909091</td>\n",
+       "      <td>2.119177</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.305085</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1995 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            bmi  age country been_pregnant_before   education  \\\n",
-       "383   26.524913   27      SE            No, never  University   \n",
-       "424   20.195092   30      SE            No, never  University   \n",
-       "631   20.077335   28      SE            No, never  University   \n",
-       "980   20.571429   29   Other            No, never  University   \n",
-       "1126  23.808690   27      SE            No, never  University   \n",
-       "1300  20.936639   31      GB            No, never  University   \n",
-       "1521  23.888441   31   Other            No, never  University   \n",
-       "1555  20.195578   32      SE            No, never  University   \n",
-       "1586  27.290694   30      US                  Yes  University   \n",
-       "1724  22.862369   25      SE            No, never  University   \n",
+       "            bmi  age     country been_pregnant_before  \\\n",
+       "0     22.942130   31          SE            No, never   \n",
+       "1     19.886054   34  Unreported           Unreported   \n",
+       "2     29.323049   41          SE            No, never   \n",
+       "3     24.386526   27          SE            No, never   \n",
+       "4     29.299971   29          SE            No, never   \n",
+       "...         ...  ...         ...                  ...   \n",
+       "1990  24.867781   36          GB                  Yes   \n",
+       "1991  21.616406   32          GB            No, never   \n",
+       "1992  24.218750   23          SE           Unreported   \n",
+       "1993  21.453574   30       Other            No, never   \n",
+       "1994  19.948690   29          SE            No, never   \n",
        "\n",
-       "             sleeping_pattern  n_cycles_trying       outcome  dedication  \\\n",
-       "383       Wake same every day                1      pregnant    0.650000   \n",
-       "424   Wake same every workday                1      pregnant    0.888889   \n",
-       "631   Wake same every workday                1      pregnant    0.788462   \n",
-       "980   Wake same every workday                2      pregnant    0.970000   \n",
-       "1126      Wake same every day                2  not_pregnant    0.093750   \n",
-       "1300      Wake same every day                6  not_pregnant    0.858369   \n",
-       "1521               Unreported                1  not_pregnant    0.444444   \n",
-       "1555               Unreported                1  not_pregnant    0.000000   \n",
-       "1586               Unreported                1  not_pregnant    0.266667   \n",
-       "1724               Unreported                2      pregnant    0.170732   \n",
+       "                                education                sleeping_pattern  \\\n",
+       "0                              University         Wake same every workday   \n",
+       "1                              University                      Unreported   \n",
+       "2                              University  Several times during the night   \n",
+       "3                             High school         Wake same every workday   \n",
+       "4     Trade/technical/vocational training             Wake same every day   \n",
+       "...                                   ...                             ...   \n",
+       "1990                                  PhD                      Unreported   \n",
+       "1991                           Unreported         Wake same every workday   \n",
+       "1992                          High school         Wake same every workday   \n",
+       "1993                           University         Wake same every workday   \n",
+       "1994                           University         Wake same every workday   \n",
        "\n",
-       "      average_cycle_length  cycle_length_std  regular_cycle  \\\n",
-       "383              76.800000         55.033626          False   \n",
-       "424              89.333333         62.962952          False   \n",
-       "631              71.500000         36.382230          False   \n",
-       "980              79.250000         28.335784          False   \n",
-       "1126            102.666667         98.913430          False   \n",
-       "1300             80.333333        117.825082          False   \n",
-       "1521            145.500000        168.998521          False   \n",
-       "1555            126.000000        156.751396          False   \n",
-       "1586             79.500000         95.671312          False   \n",
-       "1724             78.250000         45.375287          False   \n",
+       "      n_cycles_trying       outcome  dedication  average_cycle_length  \\\n",
+       "0                   1      pregnant    0.640000             25.588235   \n",
+       "1                   7      pregnant    0.009569             30.875000   \n",
+       "2                   4  not_pregnant    0.298246             27.666667   \n",
+       "3                   2      pregnant    0.895833             24.250000   \n",
+       "4                   2      pregnant    0.666667             25.466667   \n",
+       "...               ...           ...         ...                   ...   \n",
+       "1990                1  not_pregnant    0.000000             30.250000   \n",
+       "1991                2      pregnant    0.843750             31.166667   \n",
+       "1992               20  not_pregnant    0.540187             26.629630   \n",
+       "1993                1  not_pregnant    0.000000             38.600000   \n",
+       "1994                2      pregnant    0.779661             29.909091   \n",
        "\n",
-       "      intercourse_frequency  pregnant  \n",
-       "383                0.066667      True  \n",
-       "424                0.013889      True  \n",
-       "631                0.153846      True  \n",
-       "980                0.190000      True  \n",
-       "1126               0.024306     False  \n",
-       "1300               0.081545     False  \n",
-       "1521               0.037037     False  \n",
-       "1555               0.000000     False  \n",
-       "1586               0.000000     False  \n",
-       "1724               0.207317      True  "
+       "      cycle_length_std  regular_cycle  intercourse_frequency  pregnant  \n",
+       "0             2.526332           True               0.200000      True  \n",
+       "1             3.522884           True               0.052632      True  \n",
+       "2             2.503331           True               0.149123     False  \n",
+       "3             3.453776           True               0.145833      True  \n",
+       "4             0.990430           True               0.254902      True  \n",
+       "...                ...            ...                    ...       ...  \n",
+       "1990          2.061553           True               0.000000     False  \n",
+       "1991          2.483277           True               0.000000      True  \n",
+       "1992          1.620735           True               0.050467     False  \n",
+       "1993         41.126634          False               0.000000     False  \n",
+       "1994          2.119177           True               0.305085      True  \n",
+       "\n",
+       "[1995 rows x 14 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df[\"average_cycle_length\"] > 70]"
+    "df"
    ]
   }
  ],
